# nexusedu

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  WORKLOG.md  alembic.ini  docker-compose.yml  etl_lms.py  etl_sis.py  package.json  pyproject.toml  requirements.txt  vercel.json
.ai-log/: session.jsonl
.claude/: settings.json.bak
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 07360b5c199c_initial_schema.py  1777909356_ef96aa80c6b7_update_config.py  1777959860_426b8aba808a_add_risk_status_field.py  1777975416_e5312800103a_enforce_timezone_aware_datetime.py  1777977269_a3e26ba4a778_enforce_timezone_aware_datetime.py  1777978524_cc13aad9a8cb_add_advisor_profile_fields.py  1778041537_f3e08ae42c77_make_user_keep_advisor_id.py  1778057988_80f09dd4f98e_update_unique_constraints.py  1778209300_49284953cffc_reinitialize.py  1778231178_f7428a316ae5_student_email_is_mandantory.py  1778342941_b57f2c8421a7_add_version_to_intervention_email.py  1778346694_8b4bd637d2c9_add_outbox_event_table.py  1778353180_6f36769b5729_enhance_models_integrity_and_performance.py  1778355227_9a00bccac137_add_appointments_table.py  1778418710_481aad74b9f2_add_workinghours_and_dateoff_tables.py  1778493716_1ac7f93369c3_add_missing_fk_indexes.py  1778518934_49e65fab98aa_add_duration_to_appointment.py  1778675001_7a4263c7f8f7_fix_postgres_enum_for_interventionstatus.py  1778678278_4c4866c96803_add_ai_overview_columns_to_case.py  1778815733_c60b1f6db06e_add_admin_dashboard_columns.py  1778829119_83c089f45bef_add_adaptive_signals_to_history.py  1778937644_2b8556302991_add_ai_and_signature_user_settings.py  1778989873_b5bdd11fd299_add_notifications_table.py  1a54b5ea1a5b_add_advisor_badges_table.py  65576d03c79c_fix_uuid_types.py  77781ce384ea_add_assigned_avisor_id_col.py  7f28650a59f1_add_user_id.py  94d2bd39c0a6_add_assigned_advisor_id_to_cases.py  9f1ec9cbec66_.py  a73dbcc304e6_merge_heads.py  b1c75aa208ce_add_cases_and_enhance_job_tracker.py  b6646f998258_add_auto_draft_enabled_to_user.py  bd0aa53c2057_add_composite_index_on_advisor_points_.py  be73fc250f7a_merge_multiple_heads.py  cadbc9ef2310_extract_user_settings_and_job_tracker.py  e4b210e87ee0_add_assigned_avisor_id_col.py  f2da6c2cdc29_add_unique_constraint_on_case_email.py  f9ff11a14bee_merge_multiple_heads.py
alembic/versionss/: 1777909356_ef96aa80c6b7_update_config.py  1777959860_426b8aba808a_add_risk_status_field.py  1777975416_e5312800103a_enforce_timezone_aware_datetime.py  1777977269_a3e26ba4a778_enforce_timezone_aware_datetime.py  1778057988_80f09dd4f98e_update_unique_constraints.py  1778209084_ec1beba8c7e7_remove_task_model.py
data/: app.db  lms_db.duckdb  mock_student_scores.csv  sis_db.duckdb  v2_students.csv
data/phases/: activities_phase1.csv  activities_phase2.csv  activities_phase3.csv  students_phase1.csv  students_phase2.csv  students_phase3.csv
docs/: ANOMALY_DETECTION_ALGORITHM.md  ENDPOINTS.md  ENDPOINTS_concise.md  GIT_WORKFLOW.md  JOURNAL.md  PRD.md  REPO_STRUCTURE.md  SYSTEM-ARCHITECTURE.md  WORKLOG.md  endpoints.md  system_architecture.md  workflow.txt
frontend/: .env-example  .gitignore  ENDPOINTS_concise.md  GEMINI.md  eval.md  next.config.mjs  package-lock.json  package.json  proxy.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: logo.tsx  providers.tsx  theme-toggle.tsx  websocket-provider.tsx
frontend/hooks/: use-admin-dashboard.ts  use-advisors.ts  use-alerts.ts  use-appointments-query.ts  use-auth.tsx  use-dataset.ts  use-metrics.ts  use-notifications.ts  use-profile.ts  use-schedule-query.ts  use-socket.ts  use-student-query.ts  use-uploads.ts  use-websocket.ts
frontend/lib/: alerts.ts  api.ts  appointments.ts  awaiting-feedback.ts  constants.ts  csv.ts  indexeddb.ts  logger.ts  query-client.ts  query-keys.ts  schedule-adapter.ts  schedule.ts  socket.ts  static-content.ts
frontend/styles/: globals.css
infra/: otel-collector-config.yaml  prometheus.yaml
scripts/: README.md  create_user.py  demo_0_baseline.py  demo_1_drop.py  demo_2_recovery.py  dump_users.py  generate_3_phase_datasets.py  generate_dashboard_mock_data.py  generate_mock_data.py  interactive_demo.py  log_hook.py  manage_app.sh  manage_data.py  reseed_all.py  reseed_all.sh  reseed_dashboard.py  reset.sh  seed_competitive_advisors.py  seed_data.py  submit_log.py  utils.py
src/: __init__.py  agent.py  db.py  types.py  ui.api.js  ui.app.js  ui.charts.js  ui.components.js  ui.constants.js  ui.css  ui.html  ui.js  ui.payload.js  worker.py
src/agents/: __init__.py  agent.py  llms.py  nodes.py  schemas.py  state.py  utils.py
src/api/: auth.py  lifecycle.py  main.py  types.py
src/application/: exceptions.py
src/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/baml_src/: clients.baml  generate_draft_email.baml  generate_sql.baml  reflect_sql.baml
src/core/: config.py  container.py  identifiers.py  logger.py  otel.py
src/database/: __init__.py  config.py  factory.py  interfaces.py  manager.py  models.py  session.py
src/domain/: exceptions.py
src/front/: package-lock.json  sv_test.csv
src/front_e/: package-lock.json  tsconfig.tsbuildinfo
src/telemetry/: __init__.py  logger.py
src/tools/: __init__.py  db.py
src/utils/: collections.py  env.py
terraform/: .gitignore  .terraform.lock.hcl  README.md  backend.tf  compute.tf  database.tf  firewall.tf  main.tf  network.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/scripts/: cleanup_vpc.sh  startup.sh
tests/: conftest.py  test_agent_graph.py  test_api.py  test_robust_outputs.py
tests/agents/: test_anonymization.py  test_nodes.py
tests/api/: test_admin_promote.py  test_alerts_routes.py  test_auth_rbac.py  test_cors.py  test_data_routes.py  test_gamification.py  test_health.py  test_metrics.py  test_query_routes.py  test_query_service.py
tests/database/: test_concurrency.py  test_duckdb_config.py  test_duckdb_engine.py  (+2 more)
(+403 files in other folders)
