[project]
name = "a20-app-007"
version = "0.1.0"
description = "An agent assistant."
readme = "README.md"
requires-python = ">=3.12" # ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
    "grandalf>=0.8",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "langfuse>=4.5.1",
    "baml-py>=0.221.0",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "sqlglot>=30.6.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "aiosqlite>=0.20.0",
    "arq>=0.28.0",
    "redis>=5.3.1",
]
# dependencies = []

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Apply these ignores only to files in the tests directory
"tests/**/*.py" = [
    "S101",    # Use of assert is mandatory in tests
    "ARG001",  # Unused function arguments (fixtures)
    "FBT001",  # Boolean positional arguments in parametrization
    "D",       # Ignore missing docstrings in tests
]


[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
# select = [
#     "ALL",
# ]
select = [
    "F",      # pyflakes (runtime errors, unused imports/variables)
    "E", "W", # pycodestyle (style and whitespace)
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize syntax)
    "B",      # flake8-bugbear (common bugs & best practices)
    "SIM",    # flake8-simplify (code simplification)
    "C4",     # flake8-comprehensions (list/set/dict comprehension help)
    "TC",     # flake8-type-checking (move typing imports to `if TYPE_CHECKING`)
    "PL",     # flake8-unused-arguments
    "RET",    # flake8-return (return statement issues)
    "ARG",    # pylint rules (a subset)
    "ANN",    # type annotations enforcement
    "COM",    # flake8-commas
    "C90",    # maccabe complexity
    "D",      # pydocstyle
    "A",      # flake8-builtins

    # "YTT",
    # "DTZ",
    # "ISC",
    # "ICN",
    # "INP",
    # "PIE",
    # "PT",
    # "TID",
    # "PLC",
    # "PLE",
    # "PLR",
    # "PLW",
    # "RUF",
    # "PYI",
]

ignore = [
    'Q000',   # Double quote
    'ERA001', # Code comment
    'E501',   # line too long
    'F841',   # pyright already supports this
    'F401',   
    'D416',   # numpydocstyle does not use colon in section name
    'COM812'
]

fixable = ['ALL']
unfixable = []
extend-select = ['PT']

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
